--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.24.1",
     "@hookform/resolvers": "^3.3.1",
-    "@prisma/client": "^5.4.1",
+    "@mapbox/node-pre-gyp": "^1.0.11",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.5.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -26,6 +28,8 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -35,10 +39,10 @@
     "eslint-config-next": "13.5.2",
     "lucide-react": "^0.279.0",
     "mysql2": "^3.6.1",
-    "next": "^13.5.3",
-    "next-cloudinary": "^4.22.0",
+    "next": "^14.0.1",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.30",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
@@ -54,6 +58,9 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "prisma": "^5.4.1"
+    "@types/bcrypt": "^5.0.1",
+    "@types/bcryptjs": "^2.4.5",
+    "@types/next-auth": "^3.15.0",
+    "prisma": "^5.5.2"
   }
 }
