--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.279.0",
     "mysql2": "^3.6.1",
     "next": "^14.0.1",
+    "next-cloudinary": "^5.3.0",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
