--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-cloudinary": "^5.3.0",
     "next-themes": "^0.2.1",
     "node": "^21.1.0",
+    "node-pre-gyp": "^0.17.0",
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
