--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
@@ -39,15 +39,12 @@
     "eslint-config-next": "13.5.2",
     "lucide-react": "^0.279.0",
     "mysql2": "^3.6.1",
-
-    "next": "^14.0.2",
-
     "next": "^14.0.1",
-    "next-cloudinary": "^5.3.0",
     "next-auth": "^4.24.4",
     "next-cloudinary": "^5.3.0",
     "next-themes": "^0.2.1",
     "node": "^21.1.0",
+    "node-pre-gyp": "^0.17.0",
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -64,7 +61,6 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.1",
     "@types/bcryptjs": "^2.4.5",
     "@types/next-auth": "^3.15.0",
     "prisma": "^5.5.2"
