--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@mapbox/node-pre-gyp": "^1.0.11",
+    "@material-tailwind/react": "^2.1.4",
     "@next-auth/prisma-adapter": "^1.0.7",
      "@prisma/client": "^5.6.0",
     "@radix-ui/react-checkbox": "^1.0.4",
