--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.1",
     "@mapbox/node-pre-gyp": "^1.0.11",
     "@material-tailwind/react": "^2.1.4",
